Bug 480080 - Terminal path automatically changes on launch even if the terminal setting is disabled.
Summary: Terminal path automatically changes on launch even if the terminal setting is...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: 23.08.4
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-20 02:57 UTC by Benjamin Currie
Modified: 2024-01-20 15:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Currie 2024-01-20 02:57:18 UTC
SUMMARY
***
There is a setting in Kate "Automatically synchronize the terminal with the current document when possible" which I have unchecked. Both when opening an ordinary file and a session it seems to still change the path automatically running a cd command by itself.
***

STEPS TO REPRODUCE
1. Disable the setting "Automatically synchronize the terminal with the current document when possible" under terminal settings.
2. Close Kate
3. Open a session or file with Kate
4. View the terminals current working directory

OBSERVED RESULT
The path is set to the path of the current file
EXPECTED RESULT
No automatic path change when opening a file.
For sessions it would make sense for it to be the same path as the last session.
Comment 1 Christoph Cullmann 2024-01-20 15:33:41 UTC
Git commit 9540c5b3881c562d745db3906d77319858544fb7 by Christoph Cullmann.
Committed on 20/01/2024 at 16:33.
Pushed by cullmann into branch 'master'.

fix: terminal path automatically changes on launch even if the terminal setting is disabled

M  +3    -1    addons/konsole/kateconsole.cpp

https://invent.kde.org/utilities/kate/-/commit/9540c5b3881c562d745db3906d77319858544fb7
Comment 2 Christoph Cullmann 2024-01-20 15:33:58 UTC
Good catch.
Comment 3 Christoph Cullmann 2024-01-20 15:35:07 UTC
Git commit da7dd7996fa94a51a654e74309ffcb7279c8a111 by Christoph Cullmann.
Committed on 20/01/2024 at 16:35.
Pushed by cullmann into branch 'release/24.02'.

fix: terminal path automatically changes on launch even if the terminal setting is disabled


(cherry picked from commit 9540c5b3881c562d745db3906d77319858544fb7)

M  +3    -1    addons/konsole/kateconsole.cpp

https://invent.kde.org/utilities/kate/-/commit/da7dd7996fa94a51a654e74309ffcb7279c8a111