fix: terminal path automatically changes on launch even if the terminal setting is disabled

BUG: 480080